# zerobus-rust-examples

./: .gitignore  AGENTS.md  Cargo.toml  README.md
aws-generic-ingestor/: Cargo.toml  Makefile  README.md
aws-generic-ingestor/proto/: aws_raw_events.proto
aws-generic-ingestor/src/: main.rs
aws-generic-ingestor/terraform/: outputs.tf  providers.tf  variables.tf
aws-lambda-sqs-ingestor/: Cargo.toml  Makefile  README.md
aws-lambda-sqs-ingestor/src/: main.rs
aws-lambda-sqs-ingestor/terraform/: main.tf  outputs.tf  versions.tf
examples/aws-generic-ingestor/: Makefile  README.md
examples/aws-generic-ingestor/proto/: aws_raw_events.rs
examples/aws-generic-ingestor/src/: handler.rs  ingest.rs  lib.rs  proto.rs  sdk.rs
examples/aws-generic-ingestor/terraform/: README.md  main.tf  versions.tf
examples/aws-lambda-sqs-ingestor/: Makefile  README.md
examples/aws-lambda-sqs-ingestor/proto/: sqs_messages.proto  sqs_messages.rs
examples/aws-lambda-sqs-ingestor/src/: main.rs
examples/aws-lambda-sqs-ingestor/terraform/: README.md  providers.tf  variables.tf
examples/hello-world/: Makefile  README.md  buf.gen.yaml
hello-world/: Cargo.toml  Makefile  README.md
hello-world/proto/: zerobus_hello_world.proto
hello-world/src/: main.rs
