[workspace]
members = [
    "examples/hello-world",
    "examples/aws-lambda-sqs-ingestor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Databricks"]
license = "Apache-2.0"

[workspace.dependencies]
databricks-zerobus-ingest-sdk = "0.1.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.5"
prost-types = "0.13.5"
anyhow = "1.0.100"
